@@ -11,6 +11,7 @@ v1.05 ()
     [-] Fixed crash in some rare occasions when trying to set the cover for the current track
     [-] Gnome media keys no longer working when starting/closing multiple instances
     [-] Fixed labels not always properly updated in the equalizer
+    [ ] Ignore disc number when it looks like '1/1' (#596350)
     [ ] Improved startup time
     [ ] The playbin2 GStreamer component is now used by default (use the --playbin flag to use the old playbin component)
     [ ] Equalizer module has a menu item (CTRL-E) when enabled (#495761)
